Rooms: Fixed Responsive bug on Mobile

--- a/css/rooms.css
+++ b/css/rooms.css
@@ -1,86 +1,72 @@
-body
-{
-    font-family: 'Raleway', sans-serif;
+body {
+  font-family: "Raleway", sans-serif;
 }
 /* NAVBAR */
-#navbar
-{
-  height:60px;
+#navbar {
+  height: 60px;
   margin-bottom: 20px;
   /* border-bottom: 1px solid lightgrey; */
-  padding: 10px
+  padding: 10px;
 }
-#logo
-{
+#logo {
   height: 50px;
   padding: 5px;
 }
-.navLinks
-{
+.navLinks {
   color: #0e0e0e;
   margin: 10px;
   vertical-align: 80%;
   float: right;
 }
-.link
-{
+.link {
   color: #0e0e0e;
   margin: 10px;
   box-align: right;
-  
+  text-decoration: none;
 }
 /* ROOM TITLE */
-.roomCategory
-{
+.roomCategory {
   text-align: center;
-  font-family:'Tangerine', cursive;
+  font-family: "Tangerine", cursive;
   font-weight: 200;
   margin-bottom: 5px;
   font-size: 5em;
 }
 /* CARDS */
-.row
-{
-  margin-bottom:30px;
+.row {
+  margin-bottom: 30px;
 }
-.title
-{
-    text-align: center;
-    margin:0px;
+.title {
+  text-align: center;
+  margin: 0px;
 }
-#name
-{
+#name {
   margin: 1.75rem;
 }
-.card 
-{
+.card {
   border: 1px solid #d3d3d3;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   min-height: 360px;
-}  
-.bg-img 
-{
-    background-size: cover;
-    background-position: center;
-    min-height: 30%;
-    display: block;
 }
-img
-{
-    max-height: 100%;
-    max-width:100%;
-    margin: auto;
-    object-fit: cover;
+.bg-img {
+  background-size: cover;
+  background-position: center;
+  min-height: 30%;
+  display: block;
 }
-.content 
-{
-    padding: 15px;
+img {
+  max-height: 100%;
+  max-width: 100%;
+  margin: auto;
+  object-fit: cover;
 }
-button 
-{
+.content {
+  padding: 15px;
+}
+button {
   background-color: transparent;
-  border: 1px solid #2196F3;
-  padding: .5rem 1rem;
+  border: 1px solid #2196f3;
+  padding: 0.5rem 1rem;
   cursor: pointer;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
